--- a/Quiz1/index.html
+++ b/Quiz1/index.html
@@ -57,5 +57,6 @@
     <footer>
             <p>&copyFrank Schwind 2018</p>
     </footer>
+    <script src="HolidayChallenge.js"></script>
 </body>
 </html>
