--- a/Quiz1/index.html
+++ b/Quiz1/index.html
@@ -58,5 +58,6 @@
             <p>&copyFrank Schwind 2018</p>
     </footer>
     <script src="HolidayChallenge.js"></script>
+    <script src="StarWarsRuntimeHelper.js"></script>
 </body>
 </html>
